# rescript-vscode

./: .depend  .gitignore  .merlin  .ocamlformat  .ocamlformat-ignore  .prettierignore  .vscodeignore  .yarnrc.yml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Changes.md  HISTORY.md  Makefile  PROJECT_HEURISTICS.md  README.md  Readme.md  analysis.opam  doc.md  dune  dune-project  package-lock.json  package.json  reason_snippets.json  rescript-editor-support.opam  rescript-vscode-0.0.8.vsix  rescript.configuration.json  rescript.json  rescript.tmLanguage.json  snippets.json  test.sh  tools.opam  tsconfig.json  unmonad.sh
analysis/: .depend  .gitignore  .merlin  .ocamlformat-ignore  LICENSE  Makefile  README.md  Readme.md  basetest.txt  checkErrors.js  dune  dune-project  package-lock.json  package.json  randomfile.txt  rescript-vscode.opam  test.sh  testfile.ml  testfile2.ml  testmore.ml
analysis/.github/workflows/: ci.yml
analysis/examples/example-project/: .merlin  bsconfig.json
analysis/examples/example-project/src/: Hello.re  Json.re  Serde.res
analysis/examples/larger-project/: .merlin  bsconfig.json  package-lock.json  package.json
analysis/examples/larger-project/src/: CreateErrorHandler1.js  CreateErrorHandler2.js  Hooks.js  P.js  TestImmutableArray.js  TestOptArg.js  arg_helper.js  ast_helper.js  asttypes.res  clflags.js  clflags.res  config.js  config.res  format.js  identifiable.js  identifiable.ml  location.js  location.res  longident.js  misc.js  misc.res  nativeint.js  nativeint.res  numbers.js  printf.js  res_comment.js  res_comments_table.js  res_core.js  res_diagnostics.js  res_diagnostics_printing_utils.js  res_diagnostics_printing_utils.res  res_doc.js  res_grammar.js  res_js_ffi.js  res_minibuffer.js  res_parens.js  res_parser.js  res_parsetree_viewer.js  res_printer.js  res_reporting.js  (+6 more)
analysis/reanalyze/: Annotation.ml  Arnold.ml  Common.ml  Compat.ml  DeadCommon.ml  DeadModules.ml  DeadOptionalArgs.ml  DeadType.ml  DeadValue.ml  Exception.ml  Exceptions.ml  Exceptions.mli  Il.ml  Log_.ml  Makefile  RunConfig.ml  SideEffects.ml  dune
analysis/reanalyze/examples/deadcode/: Makefile  bsconfig.json  package-lock.json  package.json  rescript.json  test.sh
analysis/reanalyze/examples/termination/: Makefile  bsconfig.json  package-lock.json  package.json  rescript.json  test.sh
analysis/reanalyze/scripts/: run_integration_tests.js
analysis/reanalyze/src/: Arnold.ml  Common.ml  DeadCommon.ml  DeadException.ml  DeadModules.ml  DeadOptionalArgs.ml  DeadType.ml  DeadValue.ml  EmitJson.ml  Exception.ml  Exceptions.ml  Exn.ml  Exn.mli  ExnLib.ml  Issues.ml  Log_.ml  ModulePath.ml  Name.ml  Name.mli  Paths.ml  Reanalyze.ml  RunConfig.ml  Version.ml  WriteDeadAnnotations.ml  dune
analysis/src/: Actions.ml  BuildSystem.ml  Cache.ml  Cfg.ml  Cli.ml  Cmt.ml  CodeActions.ml  Codemod.ml  Commands.ml  Completion.ml  CompletionBackEnd.ml  CompletionBackendNew.ml  CompletionDecorators.ml  CompletionExpressions.ml  CompletionFrontEnd.ml  CompletionFrontEndNew.ml  CompletionJsx.ml  CompletionNewTypes.ml  CompletionPatterns.ml  Completions.ml  CompletionsNewTypesCtxPath.ml  CreateInterface.ml  DceCommand.ml  Debug.ml  Definition.ml  Diagnostics.ml  DocExtraction.ml  DocumentSymbol.ml  DotCompletionUtils.ml  DumpAst.ml  Files.ml  FindFiles.ml  Formatter.ml  Hint.ml  Hover.ml  Infix.ml  Json.ml  Loc.ml  LocalTables.ml  Log.ml  (+41 more)
analysis/tests/: Makefile  bsconfig.json  package-lock.json  package.json  test.sh
analysis/tests-generic-jsx-transform/: package-lock.json  package.json
analysis/tests-generic-jsx-transform/src/: GenericJsx.res  GenericJsxCompletion.res
analysis/tests-generic-jsx-transform/src/expected/: GenericJsxCompletion.res.txt
analysis/tests-incremental-typechecking/: Makefile
analysis/tests-incremental-typechecking/src/expected/: ConstructorCompletion__Json.res.txt
analysis/tests/document/: Makefile  package-lock.json
analysis/tests/document/src/: Auto.res  Dce.res  (+2 more)
analysis/tests/src/: Actions.res  BrokenParserCases.res  Complete.res  CompletePrioritize1.res  CompletePrioritize2.res  Completion.res  CompletionAttributes.res  CompletionExpressions.res  CompletionFromModule.res  CompletionFromModule2.res  CompletionFunctionArguments.res  CompletionInferValues.res  CompletionJsx.res  CompletionJsxProps.res  CompletionMultipleEditorCompleteFrom.res  CompletionNew.res  CompletionObjects.res  CompletionPattern.res  CompletionPipeChain.res  CompletionPipeProperty.res  CompletionPipeSubmodules.res  CompletionSupport.res  CompletionTypeAnnotation.res  CreateInterface.res  Cross.res  Dce.res  Debug.res  Definition.res  DefinitionWithInterface.res  DefinitionWithInterface.resi  Destructuring.res  Diagnostics.res  Div.res  DocComments.res  DocExtractionRes.res  DotCompletionEverywhere.res  DotPipeCompletionSpec.res  ExhaustiveSwitch.res  ExoticIdentifiers.res  Firebase.res  (+35 more)
analysis/tests/workspaceSymbols/: Makefile  bsconfig.json  package-lock.json  package.json
analysis/tests/workspaces/: Makefile
(+540 files in other folders)
