opam-version: "2.0"
name: "rescript-editor-support"
version: "~dev"
synopsis: "Command line to support editor integration for ReScript"
maintainer: "ReScript"
authors: "ReScript Team"
license: "MIT"
homepage: "https://github.com/rescript-lang/rescript-editor-support"
bug-reports:
  "https://github.com/rescript-lang/rescript-editor-support/issues"
depends: [
  "dune" {>= "2.7"}
  "ocaml" {= "4.06.1"}
  "reason" {= "3.6.0"}
  "ocaml-migrate-parsetree" {>= "1.3.1" }
  "ppx_tools_versioned" {>= "5.4.0"}
  "uri" {= "3.1.0"}
]
build: [
  ["dune" "build" "-p" name "@install"]
]
dev-repo: "git+https://github.com/rescript-lang/rescript-editor-support.git"

