(lang dune 2.3)

(generate_opam_files true)

(authors "Cristiano Calcagno")

(maintainers "Cristiano Calcagno")

(homepage "https://github.com/rescript-lang/rescript-vscode")

(bug_reports "https://github.com/rescript-lang/rescript-vscode/issues")

(package
 (name rescript-vscode)
 (synopsis "ReScript vscode support")
 (depends
  (ocaml
   (>= 4.10))
  (ocamlformat
   (= 0.26.1))
  (cppo
   (= 1.6.9))
  (reanalyze
   (= 2.23.0))
  dune))
