(executable
 (public_name rescript-editor-analysis)
 (modes byte exe)
 ; The main module that will become the binary.
 (name Cli)
 (flags
  (-w "+6+26+27+32+33+39")
  (-open Jsonlib)
  (-open Outcomeprinter)
  (-open Ext)
  (-open Ml))
 ; Depends on:
 (libraries unix str ext ml jsonlib outcomeprinter reanalyze))
